<resources>
    <string name="app_name">MerchandiseApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_my">MYActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="button">Button</string>

    <string name="create_account">Create Account !!</string>
    <string name="already_have_an_account_sign_in">Already have an account?? Sign In</string>
    <string name="register">Register</string>

    <string name="merch">Merch</string>
    <string name="stores_the_product">stores the product</string>
    <string name="todo">TODO</string>
    <string name="search">Search</string>
    <string name="shop_all_the_merch_of_various_fests_events_n_hostels_and_departments">Shop all the merch of various fests, events,  hostels and departments</string>
    <string name="categories">Categories</string>
    <string name="title_activity_login">Sign in</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="hello">Hello</string>
    <string name="home">Home</string>
    <string name="shop_by_category">Shop by Category</string>
    <string name="your_orders">Your Orders</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="contact_us">Contact Us</string>
    <string name="rate">Rate </string>
    <string name="settings">Settings</string>
    <string name="nav_draw_open">Open navigation drawer</string>
    <string name="nav_draw_close">Close navigation drawer</string>
    <string name="do_not_match">Passwords do not match</string>
    <string name="profile_pic">profile_pic</string>
    <string name="email">email</string>
    <string name="sign_in_to_continue">Sign in to Continue</string>


    <string name="go">GO</string>
    <string name="new_user_sign_up">New User? Sign Up</string>
    <string name="product_name">product_name</string>
    <string name="textview">textview</string>
    <string name="price">price</string>
    <string name="product_image">product_image</string>
    <string name="reached_admin_activity">Reached admin activity</string>
    <string name="add_new_product">Add New Product</string>



</resources>
